infra/k8s/prod/challenger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-api-challenger-svc
  namespace: default
  labels:
    role: challenger
spec:
  selector:
    app: ml-api-prod
    role: challenger
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
