infra/k8s/prod/champion-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-api-champion-svc
  namespace: default
  labels:
    role: champion
spec:
  selector:
    app: ml-api-prod
    role: champion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
