infra/k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-api-prod-svc
  namespace: default
spec:
  selector:
    app: ml-api-prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
